--- a/.cproject
+++ b/.cproject
@@ -372,6 +372,7 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="com.crt.advproject.config.exe.debug.734765853.1084780419" name="ffconf.h" rcbsApplicability="disable" resourcePath="source/ffconf.h" toolsToInvoke=""/>
 					<sourceEntries>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="CMSIS"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="board"/>
@@ -381,7 +382,7 @@
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="fatfs"/>
 						<entry excluding="freertos_kernel/portable/MemMang/heap_1.c|freertos_kernel/portable/MemMang/heap_2.c|freertos_kernel/portable/MemMang/heap_3.c|freertos_kernel/portable/MemMang/heap_5.c" flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="freertos"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="sdmmc"/>
-						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="source"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="source"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="startup"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="usb"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="utilities"/>
@@ -764,7 +765,7 @@
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="fatfs"/>
 						<entry excluding="freertos_kernel/portable/MemMang/heap_1.c|freertos_kernel/portable/MemMang/heap_2.c|freertos_kernel/portable/MemMang/heap_3.c|freertos_kernel/portable/MemMang/heap_5.c" flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="freertos"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="sdmmc"/>
-						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="source"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="source"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="startup"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="usb"/>
 						<entry flags="LOCAL|VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="utilities"/>
@@ -800,8 +801,8 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="com.nxp.mcuxpresso.core.datamodels">
-		<sdkName>SDK_2.x_MK64FN1M0xxx12</sdkName>
-		<sdkVersion>2.10.0</sdkVersion>
+		<sdkName>SDK_2.x_MK24FN1M0xxx12</sdkName>
+		<sdkVersion>2.11.0</sdkVersion>
 		<sdkComponents>middleware.sdmmc.sdhc.template.MK64F12;middleware.fatfs.template_sdspi.MK64F12;middleware.usb.host.khci_config_header.MK64F12;middleware.fatfs.template_sd.MK64F12;middleware.freertos-kernel.extension.MK64F12;component.osa_bm.MK64F12;middleware.fatfs.template_usb.MK64F12;middleware.freertos-kernel.template.MK64F12;middleware.fatfs.template_mmc.MK64F12;middleware.sdmmc.common.MK64F12;middleware.fatfs.template_ram.MK64F12;middleware.freertos-kernel.MK64F12;platform.drivers.smc.MK64F12;platform.drivers.clock.MK64F12;platform.drivers.dspi.MK64F12;platform.drivers.adc16.MK64F12;platform.drivers.rtc.MK64F12;platform.drivers.gpio.MK64F12;platform.drivers.i2c.MK64F12;platform.drivers.uart.MK64F12;platform.drivers.common.MK64F12;platform.drivers.port.MK64F12;platform.drivers.crc.MK64F12;platform.drivers.dac.MK64F12;platform.drivers.dspi_freertos.MK64F12;platform.drivers.i2c_freertos.MK64F12;platform.drivers.ftm.MK64F12;platform.drivers.rnga.MK64F12;platform.drivers.sdhc.MK64F12;platform.drivers.uart_freertos.MK64F12;platform.drivers.vref.MK64F12;utility.debug_console.MK64F12;component.serial_manager_uart.MK64F12;component.serial_manager.MK64F12;component.uart_adapter.MK64F12;middleware.fatfs.MK64F12;middleware.fatfs.mmc.MK64F12;middleware.fatfs.ram.MK64F12;middleware.fatfs.sd.MK64F12;middleware.fatfs.sdspi.MK64F12;middleware.fatfs.usb.MK64F12;middleware.sdmmc.sd.MK64F12;middleware.sdmmc.host.sdhc.interrupt.MK64F12;middleware.usb.host.stack.MK64F12;middleware.sdmmc.sdspi.MK64F12;middleware.usb.host_controller_khci.MK64F12;middleware.sdmmc.mmc.MK64F12;middleware.usb.host_msd.MK64F12;middleware.sdmmc.osa.bm.MK64F12;middleware.sdmmc.host.sdhc.MK64F12;middleware.usb.host.common_header.MK64F12;middleware.usb.common_header.MK64F12;component.lists.MK64F12;component.osa.MK64F12;device.MK64F12_startup.MK64F12;CMSIS_Include_core_cm.MK64F12;device.MK64F12_CMSIS.MK64F12;device.MK64F12_system.MK64F12;project_template.MK64F12.MK64F12;</sdkComponents>
 		<package>MK64FN1M0VLL12</package>
 		<core>cm4</core>
